View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025217 | Open CASCADE | OCCT:DRAW | public | 2014-09-04 15:30 | 2014-11-11 12:58 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | tweak | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025217: Draw Harness - activate GLSL warnings output within command vgldebug | ||||
Description | There is no command in ViewerTest to activate GLSL warnings output. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25217 has been created by kgv. SHA-1: 091573daacd50d7f42ee3e790b5f94f269a1f911 Detailed log of new commits: Author: kgv Date: Thu Sep 4 15:30:58 2014 +0400 0025217: Draw Harness - activate GLSL warnings output within command vgldebug |
|
Patch is ready for review in branch CR25217. |
|
Dear Bugmaster, The branch CR25217 is reviewed. Please test. |
|
Branch CR25217 has been updated forcibly by mkv. SHA-1: 771fde52e13af6c21efd826e39ccfe2aa9cde500 |
|
Dear BugMaster, Branch CR25217 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms and tested on Release mode. SHA-1: 771fde52e13af6c21efd826e39ccfe2aa9cde500 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 355636836 / 355200988 Total CPU difference: 46234.869999999995 / 45410.48000000016 products component : Total MEMORY difference: 110035620 / 110030920 Total CPU difference: 18138.409999999996 / 17726.57999999998 Testing on Windows: occt component : Total MEMORY difference: 242539124 / 242150964 Total CPU difference: 33722.90625 / 42815.328125 products component : Total MEMORY difference: 66691976 / 66634836 Total CPU difference: 12931.40625 / 10516.90625 There are no differences in images found by testdiff. |
|
Branch CR25217 has been deleted by kgv. SHA-1: 771fde52e13af6c21efd826e39ccfe2aa9cde500 |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-09-04 15:30 | kgv | New Issue | |
2014-09-04 15:30 | kgv | Assigned To | => kgv |
2014-09-04 15:31 | git | Note Added: 0031370 | |
2014-09-04 15:31 | kgv | Note Added: 0031371 | |
2014-09-04 15:31 | kgv | Assigned To | kgv => san |
2014-09-04 15:31 | kgv | Status | new => resolved |
2014-09-04 15:31 | kgv | Target Version | => 6.8.0 |
2014-09-10 08:19 | kgv | Assigned To | san => apl |
2014-09-15 12:31 |
|
Note Added: 0031697 | |
2014-09-15 12:31 |
|
Assigned To | apl => bugmaster |
2014-09-15 12:31 |
|
Status | resolved => reviewed |
2014-09-16 17:38 | bugmaster | Assigned To | bugmaster => mkv |
2014-09-17 21:15 | git | Note Added: 0031839 | |
2014-09-18 15:03 |
|
Note Added: 0031862 | |
2014-09-18 15:04 |
|
Test case number | => Not needed |
2014-09-18 15:04 |
|
Assigned To | mkv => bugmaster |
2014-09-18 15:04 |
|
Status | reviewed => tested |
2014-09-19 13:42 | bugmaster | Changeset attached | => occt master aaf512f1 |
2014-09-19 13:42 | bugmaster | Status | tested => verified |
2014-09-19 13:42 | bugmaster | Resolution | open => fixed |
2014-09-29 23:13 | git | Note Added: 0032344 | |
2014-11-11 12:45 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:58 |
|
Status | verified => closed |