0025217: Draw Harness - activate GLSL warnings output within command vgldebug